# opengl

./: .gitignore
create_triangle/: CMakeLists.txt  main.cpp  shader.cpp  shader.frag  shader.h  shader.vert
create_window/: CMakeLists.txt  create_window  main.cpp
